--- a/marionette/index.html
+++ b/marionette/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Backbone.Marionette with RequireJS</title>
 
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
