--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -3,9 +3,12 @@
 	<link rel="stylesheet" href="css/jquery-ui.min.css" />
 	<link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
 	<link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
-	<script src="js/lib/jquery.min.js"></script>
-	<script src="js/lib/jquery-ui.min.js"></script>
-	<script src="js/lib/nunjucks.min.js"></script>
+	<script src="lib/jquery.min.js"></script>
+	<script src="lib/jquery-ui.min.js"></script>
+	<script src="lib/nunjucks.min.js"></script>
+	<script src="lib/jquery.throttle-debounce.min.js"></script>
+	<script src="lib/underscore.min.js"></script>
+
 </head>
 <body>
 	<div id="container"></div>
@@ -13,7 +16,7 @@
 	<script src="dist/jQuery_WG_task.js"></script>
 	<script type="text/javascript">
 	$(function() {
-		$('#container').selectedItems();
+		$('#container').selectItems();
 	})
 	</script>
 </body>
