--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
-	<link rel="stylesheet" href="css/jquery-ui.min.css" />
-	<link rel="stylesheet" href="css/jquery-ui.theme.min.css" />
-	<link rel="stylesheet" href="css/jquery-ui.structure.min.css" />
+	<link rel="stylesheet" href="css/jquery-ui.css" />
+	<!-- <link rel="stylesheet" href="css/jquery-ui.theme.css" /> -->
+	<!-- <link rel="stylesheet" href="css/jquery-ui.structure.css" /> -->
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<script src="lib/jquery.min.js"></script>
 	<script src="lib/jquery-ui.min.js"></script>
 	<script src="lib/nunjucks.min.js"></script>
@@ -16,7 +17,7 @@
 	<script src="dist/jQuery_WG_task.js"></script>
 	<script type="text/javascript">
 	$(function() {
-		$('#container').selectItems();
+		$('#container').selectItems({selectedItems: ['item 1']});
 	})
 	</script>
 </body>
