--- a/marionette/index.html
+++ b/marionette/index.html
@@ -17,23 +17,12 @@
 
     <body>
         <div class="container">
-            <div class="header">
-                <span id="main-nav">
-                </span>
-                <h3 class="text-muted">Marionette boilerplate</h3>
-            </div>
 
-            <div id="notification"></div><!-- /#notification -->
-
-            <div id="main">
-            </div>
-
-            <div class="footer" id="footer">
-            </div>
+            <div id="main"></div>
 
             <!-- To be used as modal and notifications-->
-            <div class="modal fade" id="dialog" tabindex="-1" role="dialog" aria-hidden="true">
-            </div><!-- /.modal -->
+            <div class="modal fade" id="dialog" tabindex="-1" role="dialog" aria-hidden="true"></div>
+            <!-- /.modal -->
 
         </div> <!-- /container -->
 
